# learn

./: .gitignore  .typos.toml  06_Dataframe_Transformer.py  404.html  Dockerfile  DuckDB_Loading_CSVs.py  LICENSE.md  Makefile  README.md  index.html  pyproject.toml  requirements.txt  widget-demo.py
.github/: PULL_REQUEST_TEMPLATE.md
ModernPythonDataScienceHandbook/: 00.00-Preface.py  01.00-IPython-Beyond-Normal-Python.py  01.01-Help-And-Documentation.py  01.02-Shell-Keyboard-Shortcuts.py  01.03-Magic-Commands.py  01.04-Input-Output-History.py  01.05-IPython-And-Shell-Commands.py  01.07-Timing-and-Profiling.py  01.08-More-IPython-Resources.py  02.00-Introduction-to-NumPy.py  02.01-Understanding-Data-Types.py  02.02-The-Basics-Of-NumPy-Arrays.py  02.03-Computation-on-arrays-ufuncs.py  02.04-Computation-on-arrays-aggregates.py  02.05-Computation-on-arrays-broadcasting.py  02.06-Boolean-Arrays-and-Masks.py  02.07-Fancy-Indexing.py  02.08-Sorting.py  02.09-Structured-Data-NumPy.py  03.00-Introduction-to-Pandas.py  03.01-Introducing-Pandas-Objects.py  03.02-Data-Indexing-and-Selection.py  03.03-Operations-in-Pandas.py  03.04-Missing-Values.py  03.05-Hierarchical-Indexing.py  03.06-Concat-And-Append.py  03.07-Merge-and-Join.py  03.08-Aggregation-and-Grouping.py  03.09-Pivot-Tables.py  03.10-Working-With-Strings.py  03.11-Working-with-Time-Series.py  03.12-Performance-Eval-and-Query.py  03.13-Further-Resources.py  04.00-Introduction-To-Matplotlib.py  04.01-Simple-Line-Plots.py  04.02-Simple-Scatter-Plots.py  04.03-Errorbars.py  04.04-Density-and-Contour-Plots.py  (+27 more)
js/: build.js  (+2 more)
(+307 files in other folders)
